fix : menu bug on mobile

--- a/css/index.scss
+++ b/css/index.scss
@@ -71,6 +71,7 @@
   padding-bottom: 15px;
   @include mobile {
     position: relative;
+    z-index: 10;
   }
 
   .hamburger {
